# P8-Aleks-Fork

./: .env  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  range-qds-query-driven-rework-guide.md  removeDuplications.py  removeOutliers.py  requirements.txt  trim_moving.py
AISDATA/: README.md
Aleks-Sprint/: README.md  model-training-progress-log.md  phase-2-prep.md  qds-performance-sprint-plan.md  range-aware-coverage-compression-sweep-20260513.md  range-aware-epoch-sweep-20260513.md  range-aware-objective-alignment-and-risks.md  range-objective-redesign.md  range-training-redesign.md  sprint-ambitions.md  sprint-plan.md
QDS/: .gitignore  CODE_LAYOUT.md  Makefile  README.md  pyrightconfig.json  requirements-common.txt  requirements-cpu.txt  requirements-cuda-cu130.txt  requirements.txt
Range-QDS/: Makefile  README.md  pyrightconfig.json
Range_QDS/: .gitignore  CODE_LAYOUT.md  Makefile  README.md
Sprint/: README.md  range-training-audit.md  range-training-progress.md  range-training-redesign.md
ais_pipeline/: README.md  __init__.py  geo.py  pipeline.py
db/: README.md  compose.yaml  import_ais_csv.py  smoke_test_db.py
docs/: terminal_commands.md
environment_setup/: README.md  __init__.py  hadoop_environment.py  spark_environment.py
save_out_files/: training_AI_03-05-26_01:10_819323.out  training_AI_03-05-26_01:44_819347.out  training_AI_03-05-26_01:44_819352.out  training_AI_03-05-26_01:46_819324.out  training_AI_03-05-26_01:46_819326.out  training_AI_03-05-26_01:46_819327.out  training_AI_03-05-26_01:50_819353.out  training_AI_03-05-26_02:07_819355.out  training_AI_03-05-26_10:36_819892.out  training_AI_03-05-26_10:36_819893.out  training_AI_03-05-26_10:36_819894.out  training_AI_03-05-26_10:36_819895.out  training_AI_03-05-26_10:36_819896.out  training_AI_03-05-26_12:33_819949.out  training_AI_03-05-26_12:44_819950.out  training_AI_03-05-26_13:16_819951.out  training_AI_03-05-26_13:48_819954.out  training_AI_04-05-26_00:28_820653.out  training_AI_04-05-26_00:32_820654.out  training_AI_04-05-26_00:32_820655.out  training_AI_04-05-26_00:47_820657.out  (+17 more)
(+801 files in other folders)
